unpackaged/main/default/objects/loan__Due_Payment__c/loan__Due_Payment__c.object-meta.xml
<CustomObject>
    <label>Due Payment</label>
    <nameField>
        <displayFormat>DPID-{0000000000}</displayFormat>
        <label>Due Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>