unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__Archived__c.field-meta.xml
<CustomField>
    <fullName>loan__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>