unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__Due__c.field-meta.xml
<CustomField>
    <fullName>loan__Due__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due</label>
    <referenceTo>loan__Loan_account_Due_Details__c</referenceTo>
    <relationshipLabel>Due Payments</relationshipLabel>
    <relationshipName>Due_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>