unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>