unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__Loan_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Payment Transaction</label>
    <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
    <relationshipLabel>Due Payments</relationshipLabel>
    <relationshipName>Due_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>