unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__Summary_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Summary_Record_Id__c</fullName>
    <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
    <label>Summary Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>