unpackaged/main/default/objects/loan__Due_Payment__c/fields/loan__TDS__c.field-meta.xml
<CustomField>
    <fullName>loan__TDS__c</fullName>
    <description>TDS Paid amount captured for reversals</description>
    <label>TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>